adapt AplicationServices, AplicationServiceResponse, OrderHandler and SecurityTest with new architecture