@@ -3,6 +3,9 @@ package ir.ramtung.tinyme.domain.entity;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 
+import ir.ramtung.tinyme.domain.entity.security_stats.ExecuteStats;
+import ir.ramtung.tinyme.domain.entity.security_stats.SituationalStats;
+import ir.ramtung.tinyme.domain.entity.security_stats.SituationalStatsType;
 import ir.ramtung.tinyme.domain.exception.NotFoundException;
 
 import java.time.LocalDateTime;
@@ -100,12 +103,10 @@ public class SecurityTest {
 			assertThat(actualStopPrice).isEqualTo(stopPrice);
 		}
 
-		private void assertMatchResult(MatchResult result, MatchingOutcome outcome, long orderId, int numOfTrades) {
-			MatchingOutcome actualOutcome = result.outcome();
-			long actualOrderId = result.remainder().getOrderId();
-			int actualNumOfTrades = result.trades().size();
+		private void assertExecuteStats(ExecuteStats stats, long orderId, int numOfTrades) {
+			long actualOrderId = stats.getOrderId();
+			int actualNumOfTrades = stats.getTrades().size();
 
-			assertThat(actualOutcome).isEqualTo(outcome);
 			assertThat(actualOrderId).isEqualTo(orderId);
 			assertThat(actualNumOfTrades).isEqualTo(numOfTrades);
 		}
@@ -194,12 +195,12 @@ public class SecurityTest {
 			security.deleteOrder(Side.BUY, 8);
 		}
 
-		public MatchResult decrease_sell_order_quantity() {
+		public SecurityResponse decrease_sell_order_quantity() {
 			Order order = new Order(1, security, Side.SELL, 4, 600, sellerBroker, sellerShareholder);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_sell_ice_order_quantity() {
+		public SecurityResponse decrease_sell_ice_order_quantity() {
 			IcebergOrder order = new IcebergOrder(
 				5,
 				security,
@@ -210,26 +211,26 @@ public class SecurityTest {
 				sellerShareholder,
 				10
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_buy_order_quantity() {
+		public SecurityResponse decrease_buy_order_quantity() {
 			Order order = new Order(3, security, Side.BUY, 7, 300, buyerBroker, buyerShareholder);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_buy_ice_order_quantity() {
+		public SecurityResponse decrease_buy_ice_order_quantity() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.BUY, 7, 500, buyerBroker, buyerShareholder, 10);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_sell_order_quantity() {
+		public SecurityResponse increase_sell_order_quantity() {
 			Order order = new Order(2, security, Side.SELL, 15, 700, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 5);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_sell_ice_order_quantity() {
+		public SecurityResponse increase_sell_ice_order_quantity() {
 			IcebergOrder order = new IcebergOrder(
 				5,
 				security,
@@ -241,15 +242,15 @@ public class SecurityTest {
 				10
 			);
 			sellerShareholder.incPosition(security, 15);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_sell_order_quantity_but_not_enough_position() {
+		public SecurityResponse increase_sell_order_quantity_but_not_enough_position() {
 			Order order = new Order(2, security, Side.SELL, 15, 700, sellerBroker, sellerShareholder);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_sell_ice_order_quantity_but_not_enough_position() {
+		public SecurityResponse increase_sell_ice_order_quantity_but_not_enough_position() {
 			IcebergOrder order = new IcebergOrder(
 				5,
 				security,
@@ -260,79 +261,79 @@ public class SecurityTest {
 				sellerShareholder,
 				10
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_order_quantity() {
+		public SecurityResponse increase_buy_order_quantity() {
 			Order order = new Order(4, security, Side.BUY, 25, 400, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(6000);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_ice_order_quantity() {
+		public SecurityResponse increase_buy_ice_order_quantity() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.BUY, 60, 500, buyerBroker, buyerShareholder, 10);
 			buyerBroker.increaseCreditBy(7500);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_order_quantity_but_not_enough_credit() {
+		public SecurityResponse increase_buy_order_quantity_but_not_enough_credit() {
 			Order order = new Order(4, security, Side.BUY, 25, 400, buyerBroker, buyerShareholder);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_ice_order_quantity_but_not_enough_credit() {
+		public SecurityResponse increase_buy_ice_order_quantity_but_not_enough_credit() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.BUY, 60, 500, buyerBroker, buyerShareholder, 10);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_sell_order_price_no_trading_happens() {
+		public SecurityResponse decrease_sell_order_price_no_trading_happens() {
 			Order order = new Order(3, security, Side.SELL, 10, 650, sellerBroker, sellerShareholder);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_sell_ice_order_price_no_trading_happens() {
+		public SecurityResponse decrease_sell_ice_order_price_no_trading_happens() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.SELL, 45, 600, sellerBroker, sellerShareholder, 10);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_sell_order_price_and_completely_traded() {
+		public SecurityResponse decrease_sell_order_price_and_completely_traded() {
 			Order order = new Order(3, security, Side.SELL, 10, 450, sellerBroker, sellerShareholder);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_sell_ice_order_price_and_completely_traded() {
+		public SecurityResponse decrease_sell_ice_order_price_and_completely_traded() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.SELL, 45, 450, sellerBroker, sellerShareholder, 10);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_sell_order_price_and_partially_traded() {
+		public SecurityResponse decrease_sell_order_price_and_partially_traded() {
 			Order order = new Order(3, security, Side.SELL, 50, 450, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 40);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_sell_ice_order_price_and_partially_traded() {
+		public SecurityResponse decrease_sell_ice_order_price_and_partially_traded() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.SELL, 50, 450, sellerBroker, sellerShareholder, 10);
 			sellerShareholder.incPosition(security, 5);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_buy_order_price() {
+		public SecurityResponse decrease_buy_order_price() {
 			Order order = new Order(3, security, Side.BUY, 10, 150, buyerBroker, buyerShareholder);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_buy_ice_order_price() {
+		public SecurityResponse decrease_buy_ice_order_price() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.BUY, 45, 200, buyerBroker, buyerShareholder, 10);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_sell_order_price() {
+		public SecurityResponse increase_sell_order_price() {
 			Order order = new Order(3, security, Side.SELL, 10, 950, sellerBroker, sellerShareholder);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_sell_ice_order_price() {
+		public SecurityResponse increase_sell_ice_order_price() {
 			IcebergOrder order = new IcebergOrder(
 				5,
 				security,
@@ -343,138 +344,138 @@ public class SecurityTest {
 				sellerShareholder,
 				10
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_order_price_no_trading_happens() {
+		public SecurityResponse increase_buy_order_price_no_trading_happens() {
 			Order order = new Order(1, security, Side.BUY, 10, 250, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(1500);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_ice_order_price_no_trading_happens() {
+		public SecurityResponse increase_buy_ice_order_price_no_trading_happens() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.BUY, 45, 550, buyerBroker, buyerShareholder, 10);
 			buyerBroker.increaseCreditBy(2250);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_order_price_no_trading_happens_and_not_enough_credit() {
+		public SecurityResponse increase_buy_order_price_no_trading_happens_and_not_enough_credit() {
 			Order order = new Order(1, security, Side.BUY, 10, 250, buyerBroker, buyerShareholder);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_ice_order_price_no_trading_happens_and_not_enough_credit() {
+		public SecurityResponse increase_buy_ice_order_price_no_trading_happens_and_not_enough_credit() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.BUY, 45, 550, buyerBroker, buyerShareholder, 10);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_order_price_and_completely_traded() {
+		public SecurityResponse increase_buy_order_price_and_completely_traded() {
 			Order order = new Order(2, security, Side.BUY, 10, 600, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(5000);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_ice_order_price_and_completely_traded() {
+		public SecurityResponse increase_buy_ice_order_price_and_completely_traded() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.BUY, 45, 1000, buyerBroker, buyerShareholder, 10);
 			buyerBroker.increaseCreditBy(12500);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_order_price_and_partially_traded() {
+		public SecurityResponse increase_buy_order_price_and_partially_traded() {
 			Order order = new Order(3, security, Side.BUY, 25, 700, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(13500);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_ice_order_price_and_partially_traded() {
+		public SecurityResponse increase_buy_ice_order_price_and_partially_traded() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.BUY, 90, 1000, buyerBroker, buyerShareholder, 10);
 			buyerBroker.increaseCreditBy(80000);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_order_price_and_trade_happens_but_not_enough_credit() {
+		public SecurityResponse increase_buy_order_price_and_trade_happens_but_not_enough_credit() {
 			Order order = new Order(3, security, Side.BUY, 25, 800, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(13500);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_buy_ice_order_price_and_trade_happens_but_not_enough_credit_causes_rollback() {
+		public SecurityResponse increase_buy_ice_order_price_and_trade_happens_but_not_enough_credit_causes_rollback() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.BUY, 90, 1000, buyerBroker, buyerShareholder, 10);
 			buyerBroker.increaseCreditBy(57000);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult add_sell_order_no_trades_happens() {
+		public SecurityResponse add_sell_order_no_trades_happens() {
 			Order order = new Order(6, security, Side.SELL, 15, 650, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 15);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_ice_order_no_trades_happens() {
+		public SecurityResponse add_sell_ice_order_no_trades_happens() {
 			IcebergOrder order = new IcebergOrder(6, security, Side.SELL, 20, 1000, sellerBroker, sellerShareholder, 7);
 			sellerShareholder.incPosition(security, 20);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_order_and_not_enough_position() {
+		public SecurityResponse add_sell_order_and_not_enough_position() {
 			Order order = new Order(6, security, Side.SELL, 15, 650, sellerBroker, sellerShareholder);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_ice_order_and_not_enough_position() {
+		public SecurityResponse add_sell_ice_order_and_not_enough_position() {
 			IcebergOrder order = new IcebergOrder(6, security, Side.SELL, 20, 1000, sellerBroker, sellerShareholder, 7);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_order_and_completely_traded() {
+		public SecurityResponse add_sell_order_and_completely_traded() {
 			Order order = new Order(8, security, Side.SELL, 13, 400, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 13);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_ice_order_and_completely_traded() {
+		public SecurityResponse add_sell_ice_order_and_completely_traded() {
 			IcebergOrder order = new IcebergOrder(8, security, Side.SELL, 67, 100, sellerBroker, sellerShareholder, 9);
 			sellerShareholder.incPosition(security, 67);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_order_and_partially_traded() {
+		public SecurityResponse add_sell_order_and_partially_traded() {
 			Order order = new Order(7, security, Side.SELL, 60, 500, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 60);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_ice_order_and_partially_traded_and_remainder_is_bigger_than_peak_size() {
+		public SecurityResponse add_sell_ice_order_and_partially_traded_and_remainder_is_bigger_than_peak_size() {
 			IcebergOrder order = new IcebergOrder(7, security, Side.SELL, 60, 400, sellerBroker, sellerShareholder, 3);
 			sellerShareholder.incPosition(security, 60);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_ice_order_and_partially_traded_and_remainder_is_less_than_peak_size() {
+		public SecurityResponse add_sell_ice_order_and_partially_traded_and_remainder_is_less_than_peak_size() {
 			IcebergOrder order = new IcebergOrder(7, security, Side.SELL, 60, 400, sellerBroker, sellerShareholder, 7);
 			sellerShareholder.incPosition(security, 60);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_order_matches_with_all_buyer_queue_and_finished() {
+		public SecurityResponse add_sell_order_matches_with_all_buyer_queue_and_finished() {
 			Order order = new Order(6, security, Side.SELL, 85, 100, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 85);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_ice_order_matches_with_all_buyer_queue_and_finished() {
+		public SecurityResponse add_sell_ice_order_matches_with_all_buyer_queue_and_finished() {
 			IcebergOrder order = new IcebergOrder(6, security, Side.SELL, 85, 100, sellerBroker, sellerShareholder, 10);
 			sellerShareholder.incPosition(security, 85);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_order_matches_with_all_buyer_queue_and_not_finished() {
+		public SecurityResponse add_sell_order_matches_with_all_buyer_queue_and_not_finished() {
 			Order order = new Order(6, security, Side.SELL, 120, 100, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 120);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_ice_order_matches_with_all_buyer_queue_and_not_finished() {
+		public SecurityResponse add_sell_ice_order_matches_with_all_buyer_queue_and_not_finished() {
 			IcebergOrder order = new IcebergOrder(
 				6,
 				security,
@@ -486,16 +487,16 @@ public class SecurityTest {
 				10
 			);
 			sellerShareholder.incPosition(security, 100);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_order_with_min_execution_quantity_and_next_go_to_queue() {
+		public SecurityResponse add_sell_order_with_min_execution_quantity_and_next_go_to_queue() {
 			Order order = new Order(6, security, Side.SELL, 50, 10, 500, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 50);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_ice_order_with_min_execution_quantity_and_next_go_to_queue() {
+		public SecurityResponse add_sell_ice_order_with_min_execution_quantity_and_next_go_to_queue() {
 			IcebergOrder order = new IcebergOrder(
 				6,
 				security,
@@ -508,16 +509,16 @@ public class SecurityTest {
 				10
 			);
 			sellerShareholder.incPosition(security, 50);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_order_not_enough_execution_cause_rollback() {
+		public SecurityResponse add_sell_order_not_enough_execution_cause_rollback() {
 			Order order = new Order(6, security, Side.SELL, 60, 50, 500, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 60);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_ice_order_not_enough_execution_cause_rollback() {
+		public SecurityResponse add_sell_ice_order_not_enough_execution_cause_rollback() {
 			IcebergOrder order = new IcebergOrder(
 				6,
 				security,
@@ -530,16 +531,16 @@ public class SecurityTest {
 				10
 			);
 			sellerShareholder.incPosition(security, 100);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_order_quantity_is_equal_to_min_execution_quantity() {
+		public SecurityResponse add_sell_order_quantity_is_equal_to_min_execution_quantity() {
 			Order order = new Order(6, security, Side.SELL, 50, 50, 300, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 50);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_ice_order_quantity_is_equal_to_min_execution_quantity() {
+		public SecurityResponse add_sell_ice_order_quantity_is_equal_to_min_execution_quantity() {
 			IcebergOrder order = new IcebergOrder(
 				6,
 				security,
@@ -552,106 +553,106 @@ public class SecurityTest {
 				10
 			);
 			sellerShareholder.incPosition(security, 50);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_order_no_trades_happens() {
+		public SecurityResponse add_buy_order_no_trades_happens() {
 			Order order = new Order(6, security, Side.BUY, 22, 300, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(6600);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_ice_order_no_trades_happens() {
+		public SecurityResponse add_buy_ice_order_no_trades_happens() {
 			IcebergOrder order = new IcebergOrder(6, security, Side.BUY, 5, 450, buyerBroker, buyerShareholder, 1);
 			buyerBroker.increaseCreditBy(2250);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_order_but_not_enough_credit() {
+		public SecurityResponse add_buy_order_but_not_enough_credit() {
 			Order order = new Order(10, security, Side.BUY, 22, 300, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(6000);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_ice_order_but_not_enough_credit() {
+		public SecurityResponse add_buy_ice_order_but_not_enough_credit() {
 			IcebergOrder order = new IcebergOrder(10, security, Side.BUY, 5, 450, buyerBroker, buyerShareholder, 1);
 			buyerBroker.increaseCreditBy(2000);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_order_and_completely_traded() {
+		public SecurityResponse add_buy_order_and_completely_traded() {
 			Order order = new Order(8, security, Side.BUY, 13, 700, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(8100);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_ice_order_and_completely_traded() {
+		public SecurityResponse add_buy_ice_order_and_completely_traded() {
 			IcebergOrder order = new IcebergOrder(8, security, Side.BUY, 52, 1100, buyerBroker, buyerShareholder, 10);
 			buyerBroker.increaseCreditBy(42000);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_order_and_partially_traded() {
+		public SecurityResponse add_buy_order_and_partially_traded() {
 			Order order = new Order(6, security, Side.BUY, 13, 600, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(7800);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_ice_order_and_partially_traded_and_remainder_is_bigger_than_peak_size() {
+		public SecurityResponse add_buy_ice_order_and_partially_traded_and_remainder_is_bigger_than_peak_size() {
 			IcebergOrder order = new IcebergOrder(6, security, Side.BUY, 13, 600, buyerBroker, buyerShareholder, 2);
 			buyerBroker.increaseCreditBy(7800);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_ice_order_and_partially_traded_and_remainder_is_less_than_peak_size() {
+		public SecurityResponse add_buy_ice_order_and_partially_traded_and_remainder_is_less_than_peak_size() {
 			IcebergOrder order = new IcebergOrder(6, security, Side.BUY, 14, 600, buyerBroker, buyerShareholder, 5);
 			buyerBroker.increaseCreditBy(8400);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_order_not_enough_credit_causes_rollback() {
+		public SecurityResponse add_buy_order_not_enough_credit_causes_rollback() {
 			Order order = new Order(6, security, Side.BUY, 15, 750, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(9000);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_ice_order_not_enough_credit_causes_rollback() {
+		public SecurityResponse add_buy_ice_order_not_enough_credit_causes_rollback() {
 			IcebergOrder order = new IcebergOrder(6, security, Side.BUY, 90, 1000, buyerBroker, buyerShareholder, 10);
 			buyerBroker.increaseCreditBy(78000);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_order_matches_with_all_seller_queue_and_finished() {
+		public SecurityResponse add_buy_order_matches_with_all_seller_queue_and_finished() {
 			Order order = new Order(6, security, Side.BUY, 85, 1000, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(75000);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_ice_order_matches_with_all_seller_queue_and_finished() {
+		public SecurityResponse add_buy_ice_order_matches_with_all_seller_queue_and_finished() {
 			IcebergOrder order = new IcebergOrder(6, security, Side.BUY, 85, 1000, buyerBroker, buyerShareholder, 10);
 			buyerBroker.increaseCreditBy(75000);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_order_matches_with_all_seller_queue_and_not_finished() {
+		public SecurityResponse add_buy_order_matches_with_all_seller_queue_and_not_finished() {
 			Order order = new Order(8, security, Side.BUY, 100, 1000, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(90000);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_ice_order_matches_with_all_seller_queue_and_not_finished() {
+		public SecurityResponse add_buy_ice_order_matches_with_all_seller_queue_and_not_finished() {
 			IcebergOrder order = new IcebergOrder(8, security, Side.BUY, 100, 1000, buyerBroker, buyerShareholder, 10);
 			buyerBroker.increaseCreditBy(90000);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_order_with_min_execution_quantity_and_next_go_to_queue() {
+		public SecurityResponse add_buy_order_with_min_execution_quantity_and_next_go_to_queue() {
 			Order order = new Order(6, security, Side.BUY, 22, 17, 700, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(14400);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_ice_order_with_min_execution_quantity_and_next_go_to_queue() {
+		public SecurityResponse add_buy_ice_order_with_min_execution_quantity_and_next_go_to_queue() {
 			IcebergOrder order = new IcebergOrder(
 				6,
 				security,
@@ -664,16 +665,16 @@ public class SecurityTest {
 				10
 			);
 			buyerBroker.increaseCreditBy(21400);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_order_not_enough_execution_cause_rollback() {
+		public SecurityResponse add_buy_order_not_enough_execution_cause_rollback() {
 			Order order = new Order(6, security, Side.BUY, 60, 50, 600, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(36000);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_ice_order_not_enough_execution_cause_rollback() {
+		public SecurityResponse add_buy_ice_order_not_enough_execution_cause_rollback() {
 			IcebergOrder order = new IcebergOrder(
 				6,
 				security,
@@ -686,16 +687,16 @@ public class SecurityTest {
 				10
 			);
 			buyerBroker.increaseCreditBy(80000);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_order_quantity_is_equal_to_min_execution_quantity() {
+		public SecurityResponse add_buy_order_quantity_is_equal_to_min_execution_quantity() {
 			Order order = new Order(6, security, Side.BUY, 40, 40, 1000, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(40000);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_ice_order_quantity_is_equal_to_min_execution_quantity() {
+		public SecurityResponse add_buy_ice_order_quantity_is_equal_to_min_execution_quantity() {
 			IcebergOrder order = new IcebergOrder(
 				6,
 				security,
@@ -708,7 +709,7 @@ public class SecurityTest {
 				10
 			);
 			buyerBroker.increaseCreditBy(14600);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
 		public void add_two_buy_orders_with_same_price() {
@@ -831,41 +832,41 @@ public class SecurityTest {
 			security.addNewOrder(order2);
 		}
 
-		public MatchResult add_sell_order_causes_rollback_for_buy_orders_with_same_price() {
+		public SecurityResponse add_sell_order_causes_rollback_for_buy_orders_with_same_price() {
 			this.add_two_buy_orders_with_same_price();
 			Order order = new Order(9, security, Side.SELL, 300, 300, 0, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 300);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_sell_order_causes_rollback_for_buy_ice_orders_with_same_price() {
+		public SecurityResponse add_sell_order_causes_rollback_for_buy_ice_orders_with_same_price() {
 			this.add_two_buy_ice_orders_with_same_price();
 			Order order = new Order(9, security, Side.SELL, 300, 300, 0, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 300);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult change_buy_order_price_and_equals_it_with_another_order() {
+		public SecurityResponse change_buy_order_price_and_equals_it_with_another_order() {
 			Order order = new Order(4, security, Side.BUY, 10, 200, buyerBroker, buyerShareholder);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult change_sell_order_price_and_equals_it_with_another_order() {
+		public SecurityResponse change_sell_order_price_and_equals_it_with_another_order() {
 			Order order = new Order(4, security, Side.SELL, 10, 700, sellerBroker, sellerShareholder);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult change_buy_ice_order_price_and_equals_it_with_another_order() {
+		public SecurityResponse change_buy_ice_order_price_and_equals_it_with_another_order() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.BUY, 45, 300, buyerBroker, buyerShareholder, 10);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult change_sell_ice_order_price_and_equals_it_with_another_order() {
+		public SecurityResponse change_sell_ice_order_price_and_equals_it_with_another_order() {
 			IcebergOrder order = new IcebergOrder(5, security, Side.SELL, 45, 700, sellerBroker, sellerShareholder, 10);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult add_sell_stop_limit_order_but_not_enough_position() {
+		public SecurityResponse add_sell_stop_limit_order_but_not_enough_position() {
 			StopLimitOrder order = new StopLimitOrder(
 				6,
 				security,
@@ -876,10 +877,10 @@ public class SecurityTest {
 				sellerShareholder,
 				525
 			);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
-		public MatchResult add_buy_stop_limit_order_but_not_enough_credit() {
+		public SecurityResponse add_buy_stop_limit_order_but_not_enough_credit() {
 			StopLimitOrder order = new StopLimitOrder(
 				6,
 				security,
@@ -890,7 +891,7 @@ public class SecurityTest {
 				buyerShareholder,
 				575
 			);
-			return security.addNewOrder(order).getFirst();
+			return security.addNewOrder(order);
 		}
 
 		public void add_three_stop_limit_order_both_buy_and_sell() {
@@ -907,28 +908,28 @@ public class SecurityTest {
 			orders.forEach(order -> security.addNewOrder(order));
 		}
 
-		public List<MatchResult> new_sell_order_activate_all_sell_stop_limit_orders() {
+		public SecurityResponse new_sell_order_activate_all_sell_stop_limit_orders() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			Order order = new Order(9, security, Side.SELL, 45, 500, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 45);
 			return security.addNewOrder(order);
 		}
 
-		public List<MatchResult> new_buy_order_activate_all_buy_stop_limit_orders() {
+		public SecurityResponse new_buy_order_activate_all_buy_stop_limit_orders() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			Order order = new Order(9, security, Side.BUY, 10, 600, buyerBroker, buyerShareholder);
 			buyerBroker.increaseCreditBy(6000);
 			return security.addNewOrder(order);
 		}
 
-		public List<MatchResult> new_sell_order_activate_one_sell_stop_limit_order() {
+		public SecurityResponse new_sell_order_activate_one_sell_stop_limit_order() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			Order order = new Order(9, security, Side.SELL, 30, 500, sellerBroker, sellerShareholder);
 			sellerShareholder.incPosition(security, 30);
 			return security.addNewOrder(order);
 		}
 
-		public List<MatchResult> new_buy_order_activate_one_buy_stop_limit_order() {
+		public SecurityResponse new_buy_order_activate_one_buy_stop_limit_order() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			Order order1 = new Order(10, security, Side.SELL, 10, 600, sellerBroker, sellerShareholder);
 			Order order2 = new Order(9, security, Side.BUY, 5, 600, buyerBroker, buyerShareholder);
@@ -938,7 +939,7 @@ public class SecurityTest {
 			return security.addNewOrder(order2);
 		}
 
-		public List<MatchResult> new_sell_stop_limit_order_and_active_at_the_first() {
+		public SecurityResponse new_sell_stop_limit_order_and_active_at_the_first() {
 			StopLimitOrder order = new StopLimitOrder(
 				6,
 				security,
@@ -953,7 +954,7 @@ public class SecurityTest {
 			return security.addNewOrder(order);
 		}
 
-		public List<MatchResult> new_buy_stop_limit_order_and_active_at_the_first() {
+		public SecurityResponse new_buy_stop_limit_order_and_active_at_the_first() {
 			StopLimitOrder order = new StopLimitOrder(
 				6,
 				security,
@@ -968,7 +969,7 @@ public class SecurityTest {
 			return security.addNewOrder(order);
 		}
 
-		public MatchResult decrease_price_stop_limit_sell_order() {
+		public SecurityResponse decrease_price_stop_limit_sell_order() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -980,10 +981,10 @@ public class SecurityTest {
 				sellerShareholder,
 				500
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_price_stop_limit_sell_order() {
+		public SecurityResponse increase_price_stop_limit_sell_order() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -995,10 +996,10 @@ public class SecurityTest {
 				sellerShareholder,
 				500
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_quantity_stop_limit_sell_order() {
+		public SecurityResponse decrease_quantity_stop_limit_sell_order() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1010,10 +1011,10 @@ public class SecurityTest {
 				sellerShareholder,
 				500
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_quantity_stop_limit_sell_order() {
+		public SecurityResponse increase_quantity_stop_limit_sell_order() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1026,10 +1027,10 @@ public class SecurityTest {
 				500
 			);
 			sellerShareholder.incPosition(security, 5);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_quantity_stop_limit_sell_order_and_not_enough_position() {
+		public SecurityResponse increase_quantity_stop_limit_sell_order_and_not_enough_position() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1041,10 +1042,10 @@ public class SecurityTest {
 				sellerShareholder,
 				500
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_stop_price_stop_limit_sell_order() {
+		public SecurityResponse decrease_stop_price_stop_limit_sell_order() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1056,10 +1057,10 @@ public class SecurityTest {
 				sellerShareholder,
 				350
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_stop_price_stop_limit_sell_order_and_not_activated() {
+		public SecurityResponse increase_stop_price_stop_limit_sell_order_and_not_activated() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1071,10 +1072,10 @@ public class SecurityTest {
 				sellerShareholder,
 				525
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public List<MatchResult> increase_stop_price_stop_limit_sell_order_and_activated() {
+		public SecurityResponse increase_stop_price_stop_limit_sell_order_and_activated() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1089,7 +1090,7 @@ public class SecurityTest {
 			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_price_stop_limit_buy_order() {
+		public SecurityResponse decrease_price_stop_limit_buy_order() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1101,10 +1102,10 @@ public class SecurityTest {
 				buyerShareholder,
 				600
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_price_stop_limit_buy_order() {
+		public SecurityResponse increase_price_stop_limit_buy_order() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1117,10 +1118,10 @@ public class SecurityTest {
 				600
 			);
 			buyerBroker.increaseCreditBy(750);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_price_stop_limit_buy_order_and_not_enough_credit() {
+		public SecurityResponse increase_price_stop_limit_buy_order_and_not_enough_credit() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1132,10 +1133,10 @@ public class SecurityTest {
 				buyerShareholder,
 				600
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_quantity_stop_limit_buy_order() {
+		public SecurityResponse decrease_quantity_stop_limit_buy_order() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1147,10 +1148,10 @@ public class SecurityTest {
 				buyerShareholder,
 				600
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_quantity_stop_limit_buy_order() {
+		public SecurityResponse increase_quantity_stop_limit_buy_order() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1163,10 +1164,10 @@ public class SecurityTest {
 				600
 			);
 			buyerBroker.increaseCreditBy(3500);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_quantity_stop_limit_buy_order_and_not_enough_credit() {
+		public SecurityResponse increase_quantity_stop_limit_buy_order_and_not_enough_credit() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1178,10 +1179,10 @@ public class SecurityTest {
 				buyerShareholder,
 				600
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public MatchResult decrease_stop_price_stop_limit_buy_order_and_not_activated() {
+		public SecurityResponse decrease_stop_price_stop_limit_buy_order_and_not_activated() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				7,
@@ -1193,10 +1194,10 @@ public class SecurityTest {
 				buyerShareholder,
 				575
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
-		public List<MatchResult> decrease_stop_price_stop_limit_buy_order_and_activated() {
+		public SecurityResponse decrease_stop_price_stop_limit_buy_order_and_activated() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1211,7 +1212,7 @@ public class SecurityTest {
 			return security.updateOrder(order);
 		}
 
-		public MatchResult increase_stop_price_stop_limit_buy_order() {
+		public SecurityResponse increase_stop_price_stop_limit_buy_order() {
 			this.add_three_stop_limit_order_both_buy_and_sell();
 			StopLimitOrder order = new StopLimitOrder(
 				6,
@@ -1223,7 +1224,7 @@ public class SecurityTest {
 				buyerShareholder,
 				750
 			);
-			return security.updateOrder(order).getFirst();
+			return security.updateOrder(order);
 		}
 
 		public void delete_stop_limit_sell_order() {
@@ -1507,8 +1508,9 @@ public class SecurityTest {
 
 	@Test
 	public void decrease_sell_order_quantity_and_check_match_result() {
-		MatchResult res = scenarioGenerator.decrease_sell_order_quantity();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.decrease_sell_order_quantity();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -1543,8 +1545,9 @@ public class SecurityTest {
 
 	@Test
 	public void decrease_sell_ice_order_quantity_and_check_match_result() {
-		MatchResult res = scenarioGenerator.decrease_sell_ice_order_quantity();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.decrease_sell_ice_order_quantity();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -1579,8 +1582,9 @@ public class SecurityTest {
 
 	@Test
 	public void decrease_buy_order_quantity_and_check_match_result() {
-		MatchResult res = scenarioGenerator.decrease_buy_order_quantity();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.decrease_buy_order_quantity();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -1616,8 +1620,9 @@ public class SecurityTest {
 
 	@Test
 	public void decrease_buy_ice_order_quantity_and_check_match_result() {
-		MatchResult res = scenarioGenerator.decrease_buy_ice_order_quantity();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.decrease_buy_ice_order_quantity();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -1653,8 +1658,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_sell_order_quantity_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_sell_order_quantity();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.increase_sell_order_quantity();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -1690,8 +1696,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_sell_ice_order_quantity_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_sell_ice_order_quantity();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.increase_sell_ice_order_quantity();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);	
 	}
 
 	@Test
@@ -1727,8 +1734,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_sell_order_quantity_but_not_enough_position_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_sell_order_quantity_but_not_enough_position();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_POSITIONS);
+		SecurityResponse response = scenarioGenerator.increase_sell_order_quantity_but_not_enough_position();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_POSITIONS);	
 	}
 
 	@Test
@@ -1763,8 +1771,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_sell_ice_order_quantity_but_not_enough_position_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_sell_ice_order_quantity_but_not_enough_position();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_POSITIONS);
+		SecurityResponse response = scenarioGenerator.increase_sell_ice_order_quantity_but_not_enough_position();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_POSITIONS);
 	}
 
 	@Test
@@ -1799,8 +1808,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_order_quantity_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_order_quantity();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.increase_buy_order_quantity();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -1835,8 +1845,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_ice_order_quantity_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_ice_order_quantity();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.increase_buy_ice_order_quantity();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -1871,8 +1882,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_order_quantity_but_not_enough_credit_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_order_quantity_but_not_enough_credit();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_CREDIT);
+		SecurityResponse response = scenarioGenerator.increase_buy_order_quantity_but_not_enough_credit();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_CREDIT);
 	}
 
 	@Test
@@ -1907,8 +1919,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_ice_order_quantity_but_not_enough_credit_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_ice_order_quantity_but_not_enough_credit();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_CREDIT);
+		SecurityResponse response = scenarioGenerator.increase_buy_ice_order_quantity_but_not_enough_credit();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_CREDIT);
 	}
 
 	@Test
@@ -1945,8 +1958,9 @@ public class SecurityTest {
 
 	@Test
 	public void decrease_sell_order_price_no_trading_happens_and_check_match_result() {
-		MatchResult res = scenarioGenerator.decrease_sell_order_price_no_trading_happens();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.decrease_sell_order_price_no_trading_happens();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -1981,8 +1995,9 @@ public class SecurityTest {
 
 	@Test
 	public void decrease_sell_ice_order_price_no_trading_happens_and_check_match_result() {
-		MatchResult res = scenarioGenerator.decrease_sell_ice_order_price_no_trading_happens();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.decrease_sell_ice_order_price_no_trading_happens();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2017,8 +2032,9 @@ public class SecurityTest {
 
 	@Test
 	public void decrease_sell_order_price_and_completely_traded_and_check_match_result() {
-		MatchResult res = scenarioGenerator.decrease_sell_order_price_and_completely_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.decrease_sell_order_price_and_completely_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2063,8 +2079,9 @@ public class SecurityTest {
 
 	@Test
 	public void decrease_sell_ice_order_price_and_completely_traded_and_check_match_result() {
-		MatchResult res = scenarioGenerator.decrease_sell_ice_order_price_and_completely_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.decrease_sell_ice_order_price_and_completely_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2109,8 +2126,9 @@ public class SecurityTest {
 
 	@Test
 	public void decrease_sell_order_price_and_partially_traded_and_check_match_result() {
-		MatchResult res = scenarioGenerator.decrease_sell_order_price_and_partially_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.decrease_sell_order_price_and_partially_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2155,8 +2173,9 @@ public class SecurityTest {
 
 	@Test
 	public void decrease_sell_ice_order_price_and_partially_traded_and_check_match_result() {
-		MatchResult res = scenarioGenerator.decrease_sell_ice_order_price_and_partially_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.decrease_sell_ice_order_price_and_partially_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2201,8 +2220,9 @@ public class SecurityTest {
 
 	@Test
 	public void decrease_buy_order_price_and_check_match_result() {
-		MatchResult res = scenarioGenerator.decrease_buy_order_price();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.decrease_buy_order_price();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2238,8 +2258,9 @@ public class SecurityTest {
 
 	@Test
 	public void decrease_buy_ice_order_price_and_check_match_result() {
-		MatchResult res = scenarioGenerator.decrease_buy_ice_order_price();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.decrease_buy_ice_order_price();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2275,8 +2296,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_sell_order_price_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_sell_order_price();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.increase_sell_order_price();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2311,8 +2333,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_sell_ice_order_price_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_sell_ice_order_price();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.increase_sell_ice_order_price();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2347,8 +2370,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_order_price_no_trading_happens_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_order_price_no_trading_happens();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.increase_buy_order_price_no_trading_happens();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2383,8 +2407,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_ice_order_price_no_trading_happens_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_ice_order_price_no_trading_happens();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.increase_buy_ice_order_price_no_trading_happens();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2419,8 +2444,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_order_price_no_trading_happens_and_not_enough_credit_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_order_price_no_trading_happens_and_not_enough_credit();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_CREDIT);
+		SecurityResponse response = scenarioGenerator.increase_buy_order_price_no_trading_happens_and_not_enough_credit();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_CREDIT);
 	}
 
 	@Test
@@ -2455,8 +2481,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_ice_order_price_no_trading_happens_and_not_enough_credit_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_ice_order_price_no_trading_happens_and_not_enough_credit();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_CREDIT);
+		SecurityResponse response = scenarioGenerator.increase_buy_ice_order_price_no_trading_happens_and_not_enough_credit();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_CREDIT);
 	}
 
 	@Test
@@ -2491,8 +2518,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_order_price_and_completely_traded_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_order_price_and_completely_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.increase_buy_order_price_and_completely_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2538,8 +2566,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_ice_order_price_and_completely_traded_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_ice_order_price_and_completely_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.increase_buy_ice_order_price_and_completely_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2585,8 +2614,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_order_price_and_partially_traded_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_order_price_and_partially_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.increase_buy_order_price_and_partially_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2632,8 +2662,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_ice_order_price_and_partially_traded_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_ice_order_price_and_partially_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.increase_buy_ice_order_price_and_partially_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
 	}
 
 	@Test
@@ -2678,8 +2709,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_order_price_and_trade_happens_but_not_enough_credit_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_order_price_and_trade_happens_but_not_enough_credit();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_CREDIT);
+		SecurityResponse response = scenarioGenerator.increase_buy_order_price_and_trade_happens_but_not_enough_credit();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_CREDIT);
 	}
 
 	@Test
@@ -2721,8 +2753,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_buy_ice_order_price_and_trade_happens_but_not_enough_credit_causes_rollback_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_buy_ice_order_price_and_trade_happens_but_not_enough_credit_causes_rollback();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_CREDIT);
+		SecurityResponse response = scenarioGenerator.increase_buy_ice_order_price_and_trade_happens_but_not_enough_credit_causes_rollback();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_CREDIT);
 	}
 
 	@Test
@@ -2769,8 +2802,9 @@ public class SecurityTest {
 	// TODO: add some test about updating a ice order that its display is not equal to its quantity
 
 	public void add_sell_order_no_trades_happens_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_order_no_trades_happens();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_order_no_trades_happens();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -2808,8 +2842,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_ice_order_no_trades_happens_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_ice_order_no_trades_happens();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_ice_order_no_trades_happens();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -2846,8 +2881,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_order_and_not_enough_position_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_order_and_not_enough_position();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_POSITIONS);
+		SecurityResponse response = scenarioGenerator.add_sell_order_and_not_enough_position();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_POSITIONS);
 	}
 
 	@Test
@@ -2883,8 +2919,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_ice_order_and_not_enough_position_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_ice_order_and_not_enough_position();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_POSITIONS);
+		SecurityResponse response = scenarioGenerator.add_sell_ice_order_and_not_enough_position();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_POSITIONS);
 	}
 
 	@Test
@@ -2919,8 +2956,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_order_and_completely_traded_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_order_and_completely_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_order_and_completely_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -2964,8 +3002,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_ice_order_and_completely_traded_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_ice_order_and_completely_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_ice_order_and_completely_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3008,8 +3047,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_order_and_partially_traded_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_order_and_partially_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_order_and_partially_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3053,8 +3093,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_ice_order_and_partially_traded_and_remainder_is_bigger_than_peak_size_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_ice_order_and_partially_traded_and_remainder_is_bigger_than_peak_size();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_ice_order_and_partially_traded_and_remainder_is_bigger_than_peak_size();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3100,8 +3141,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_ice_order_and_partially_traded_and_remainder_is_less_than_peak_size_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_ice_order_and_partially_traded_and_remainder_is_less_than_peak_size();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_ice_order_and_partially_traded_and_remainder_is_less_than_peak_size();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3147,8 +3189,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_order_matches_with_all_buyer_queue_and_finished_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_order_matches_with_all_buyer_queue_and_finished();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_order_matches_with_all_buyer_queue_and_finished();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3192,8 +3235,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_ice_order_matches_with_all_buyer_queue_and_finished_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_ice_order_matches_with_all_buyer_queue_and_finished();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_ice_order_matches_with_all_buyer_queue_and_finished();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3236,8 +3280,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_order_matches_with_all_buyer_queue_and_not_finished_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_order_matches_with_all_buyer_queue_and_not_finished();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_order_matches_with_all_buyer_queue_and_not_finished();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3281,8 +3326,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_ice_order_matches_with_all_buyer_queue_and_not_finished_and_check_match_check() {
-		MatchResult res = scenarioGenerator.add_sell_ice_order_matches_with_all_buyer_queue_and_not_finished();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_ice_order_matches_with_all_buyer_queue_and_not_finished();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3326,8 +3372,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_order_with_min_execution_quantity_and_next_go_to_queue_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_order_with_min_execution_quantity_and_next_go_to_queue();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_order_with_min_execution_quantity_and_next_go_to_queue();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3371,8 +3418,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_ice_order_with_min_execution_quantity_and_next_go_to_queue_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_ice_order_with_min_execution_quantity_and_next_go_to_queue();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_ice_order_with_min_execution_quantity_and_next_go_to_queue();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3416,8 +3464,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_order_not_enough_execution_cause_rollback_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_order_not_enough_execution_cause_rollback();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_EXECUTION);
+		SecurityResponse response = scenarioGenerator.add_sell_order_not_enough_execution_cause_rollback();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_EXECUTION);
 	}
 
 	@Test
@@ -3460,8 +3509,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_ice_order_not_enough_execution_cause_rollback_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_ice_order_not_enough_execution_cause_rollback();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_EXECUTION);
+		SecurityResponse response = scenarioGenerator.add_sell_ice_order_not_enough_execution_cause_rollback();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_EXECUTION);
 	}
 
 	@Test
@@ -3505,8 +3555,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_order_quantity_is_equal_to_min_execution_quantity_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_order_quantity_is_equal_to_min_execution_quantity();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_order_quantity_is_equal_to_min_execution_quantity();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3550,8 +3601,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_ice_order_quantity_is_equal_to_min_execution_quantity_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_ice_order_quantity_is_equal_to_min_execution_quantity();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_sell_ice_order_quantity_is_equal_to_min_execution_quantity();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3595,8 +3647,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_order_no_trades_happens_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_order_no_trades_happens();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_order_no_trades_happens();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3634,8 +3687,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_ice_order_no_trades_happens_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_ice_order_no_trades_happens();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_ice_order_no_trades_happens();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3672,8 +3726,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_order_but_not_enough_credit_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_order_but_not_enough_credit();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_CREDIT);
+		SecurityResponse response = scenarioGenerator.add_buy_order_but_not_enough_credit();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_CREDIT);
 	}
 
 	@Test
@@ -3710,8 +3765,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_ice_order_but_not_enough_credit_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_ice_order_but_not_enough_credit();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_CREDIT);
+		SecurityResponse response = scenarioGenerator.add_buy_ice_order_but_not_enough_credit();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_CREDIT);
 	}
 
 	@Test
@@ -3748,8 +3804,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_order_and_completely_traded_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_order_and_completely_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_order_and_completely_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3794,8 +3851,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_ice_order_and_completely_traded_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_ice_order_and_completely_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_ice_order_and_completely_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -3839,8 +3897,9 @@ public class SecurityTest {
 	}
 
 	public void add_buy_order_and_partially_traded_and_check_match_check() {
-		MatchResult res = scenarioGenerator.add_buy_order_and_partially_traded();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_order_and_partially_traded();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	public void add_buy_order_and_partially_traded_and_check_buyer_credit() {
@@ -3877,8 +3936,9 @@ public class SecurityTest {
 	}
 
 	public void add_buy_ice_order_and_partially_traded_and_remainder_is_bigger_than_peak_size_and_check_match_check() {
-		MatchResult res = scenarioGenerator.add_buy_ice_order_and_partially_traded_and_remainder_is_bigger_than_peak_size();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_ice_order_and_partially_traded_and_remainder_is_bigger_than_peak_size();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	public void add_buy_ice_order_and_partially_traded_and_remainder_is_bigger_than_peak_size_and_check_buyer_credit() {
@@ -3915,8 +3975,9 @@ public class SecurityTest {
 	}
 
 	public void add_buy_ice_order_and_partially_traded_and_remainder_is_less_than_peak_size_and_check_match_check() {
-		MatchResult res = scenarioGenerator.add_buy_ice_order_and_partially_traded_and_remainder_is_less_than_peak_size();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_ice_order_and_partially_traded_and_remainder_is_less_than_peak_size();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	public void add_buy_ice_order_and_partially_traded_and_remainder_is_less_than_peak_size_and_check_buyer_credit() {
@@ -3953,8 +4014,9 @@ public class SecurityTest {
 	}
 
 	public void add_buy_order_not_enough_credit_causes_rollback_and_check_match_check() {
-		MatchResult res = scenarioGenerator.add_buy_order_not_enough_credit_causes_rollback();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_CREDIT);
+		SecurityResponse response = scenarioGenerator.add_buy_order_not_enough_credit_causes_rollback();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_CREDIT);
 	}
 
 	public void add_buy_order_not_enough_credit_causes_rollback_and_check_buyer_credit() {
@@ -3990,8 +4052,9 @@ public class SecurityTest {
 	}
 
 	public void add_buy_ice_order_not_enough_credit_causes_rollback_and_check_match_check() {
-		MatchResult res = scenarioGenerator.add_buy_ice_order_not_enough_credit_causes_rollback();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_CREDIT);
+		SecurityResponse response = scenarioGenerator.add_buy_ice_order_not_enough_credit_causes_rollback();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_CREDIT);
 	}
 
 	public void add_buy_ice_order_not_enough_credit_causes_rollback_and_check_buyer_credit() {
@@ -4031,8 +4094,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_order_matches_with_all_seller_queue_and_finished_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_order_matches_with_all_seller_queue_and_finished();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_order_matches_with_all_seller_queue_and_finished();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -4077,8 +4141,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_ice_order_matches_with_all_seller_queue_and_finished_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_ice_order_matches_with_all_seller_queue_and_finished();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_ice_order_matches_with_all_seller_queue_and_finished();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -4123,8 +4188,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_order_matches_with_all_seller_queue_and_not_finished_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_order_matches_with_all_seller_queue_and_not_finished();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_order_matches_with_all_seller_queue_and_not_finished();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -4168,8 +4234,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_ice_order_matches_with_all_seller_queue_and_not_finished_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_ice_order_matches_with_all_seller_queue_and_not_finished();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_ice_order_matches_with_all_seller_queue_and_not_finished();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -4213,8 +4280,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_order_with_min_execution_quantity_and_next_go_to_queue_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_order_with_min_execution_quantity_and_next_go_to_queue();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_order_with_min_execution_quantity_and_next_go_to_queue();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -4258,8 +4326,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_ice_order_with_min_execution_quantity_and_next_go_to_queue_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_ice_order_with_min_execution_quantity_and_next_go_to_queue();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_ice_order_with_min_execution_quantity_and_next_go_to_queue();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -4303,8 +4372,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_order_not_enough_execution_cause_rollback_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_order_not_enough_execution_cause_rollback();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_EXECUTION);
+		SecurityResponse response = scenarioGenerator.add_buy_order_not_enough_execution_cause_rollback();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_EXECUTION);
 	}
 
 	@Test
@@ -4346,8 +4416,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_ice_order_not_enough_execution_cause_rollback_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_ice_order_not_enough_execution_cause_rollback();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_EXECUTION);
+		SecurityResponse response = scenarioGenerator.add_buy_ice_order_not_enough_execution_cause_rollback();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_EXECUTION);
 	}
 
 	@Test
@@ -4391,8 +4462,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_order_quantity_is_equal_to_min_execution_quantity_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_order_quantity_is_equal_to_min_execution_quantity();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_order_quantity_is_equal_to_min_execution_quantity();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -4438,8 +4510,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_buy_ice_order_quantity_is_equal_to_min_execution_quantity_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_ice_order_quantity_is_equal_to_min_execution_quantity();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.EXECUTED);
+		SecurityResponse response = scenarioGenerator.add_buy_ice_order_quantity_is_equal_to_min_execution_quantity();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
 	}
 
 	@Test
@@ -4500,8 +4573,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_order_causes_rollback_for_buy_orders_with_same_price_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_order_causes_rollback_for_buy_orders_with_same_price();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_EXECUTION);
+		SecurityResponse response = scenarioGenerator.add_sell_order_causes_rollback_for_buy_orders_with_same_price();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_EXECUTION);
 	}
 
 	@Test
@@ -4514,8 +4588,9 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_order_causes_rollback_for_buy_ice_orders_with_same_price_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_order_causes_rollback_for_buy_ice_orders_with_same_price();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_EXECUTION);
+		SecurityResponse response = scenarioGenerator.add_sell_order_causes_rollback_for_buy_ice_orders_with_same_price();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_EXECUTION);
 	}
 
 	@Test
@@ -4603,10 +4678,12 @@ public class SecurityTest {
 	}
 
 	@Test
-	public void new_sell_stop_limit_order_and_active_at_the_first_and_check_match_results() {
-		List<MatchResult> results = scenarioGenerator.new_sell_stop_limit_order_and_active_at_the_first();
-		assertPack.assertMatchResult(results.get(0), MatchingOutcome.EXECUTED, 6, 0);
-		assertPack.assertMatchResult(results.get(1), MatchingOutcome.EXECUTED, 6, 1);
+	public void new_sell_stop_limit_order_and_active_at_the_first_and_check_security_response() {
+		SecurityResponse response = scenarioGenerator.new_sell_stop_limit_order_and_active_at_the_first();
+
+		assertThat(((SituationalStats) response.getStats().getFirst()).getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
+		assertThat(((SituationalStats) response.getStats().get(1)).getType()).isEqualTo(SituationalStatsType.ORDER_ACTIVATED);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(2), 6, 1);
 	}
 
 	@Test
@@ -4617,10 +4694,12 @@ public class SecurityTest {
 	}
 
 	@Test
-	public void new_buy_stop_limit_order_and_active_at_the_first_and_check_match_results() {
-		List<MatchResult> results = scenarioGenerator.new_buy_stop_limit_order_and_active_at_the_first();
-		assertPack.assertMatchResult(results.get(0), MatchingOutcome.EXECUTED, 6, 0);
-		assertPack.assertMatchResult(results.get(1), MatchingOutcome.EXECUTED, 6, 1);
+	public void new_buy_stop_limit_order_and_active_at_the_first_and_check_security_response() {
+		SecurityResponse response = scenarioGenerator.new_buy_stop_limit_order_and_active_at_the_first();
+
+		assertThat(((SituationalStats) response.getStats().getFirst()).getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
+		assertThat(((SituationalStats) response.getStats().get(1)).getType()).isEqualTo(SituationalStatsType.ORDER_ACTIVATED);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(2), 6, 1);
 	}
 
 	@Test
@@ -4632,14 +4711,16 @@ public class SecurityTest {
 
 	@Test
 	public void add_sell_stop_limit_order_but_not_enough_position_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_sell_stop_limit_order_but_not_enough_position();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_POSITIONS);
+		SecurityResponse response = scenarioGenerator.add_sell_stop_limit_order_but_not_enough_position();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_POSITIONS);
 	}
 
 	@Test
 	public void add_buy_stop_limit_order_but_not_enough_credit_and_check_match_result() {
-		MatchResult res = scenarioGenerator.add_buy_stop_limit_order_but_not_enough_credit();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_CREDIT);
+		SecurityResponse response = scenarioGenerator.add_buy_stop_limit_order_but_not_enough_credit();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_CREDIT);
 	}
 
 	@Test
@@ -4690,12 +4771,17 @@ public class SecurityTest {
 	}
 
 	@Test
-	public void new_sell_order_activate_all_sell_stop_limit_orders_and_check_match_results() {
-		List<MatchResult> results = scenarioGenerator.new_sell_order_activate_all_sell_stop_limit_orders();
-		assertPack.assertMatchResult(results.get(0), MatchingOutcome.EXECUTED, 9, 5);
-		assertPack.assertMatchResult(results.get(1), MatchingOutcome.EXECUTED, 6, 1);
-		assertPack.assertMatchResult(results.get(2), MatchingOutcome.EXECUTED, 7, 1);
-		assertPack.assertMatchResult(results.get(3), MatchingOutcome.EXECUTED, 8, 1);
+	public void new_sell_order_activate_all_sell_stop_limit_orders_and_check_security_response() {
+		SecurityResponse response = scenarioGenerator.new_sell_order_activate_all_sell_stop_limit_orders();
+
+		assertThat(((SituationalStats) response.getStats().getFirst()).getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(1), 9, 5);
+		assertThat(((SituationalStats) response.getStats().get(2)).getType()).isEqualTo(SituationalStatsType.ORDER_ACTIVATED);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(3), 6, 1);
+		assertThat(((SituationalStats) response.getStats().get(4)).getType()).isEqualTo(SituationalStatsType.ORDER_ACTIVATED);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(5), 7, 1);
+		assertThat(((SituationalStats) response.getStats().get(6)).getType()).isEqualTo(SituationalStatsType.ORDER_ACTIVATED);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(7), 8, 1);
 	}
 
 	@Test
@@ -4756,12 +4842,17 @@ public class SecurityTest {
 	}
 
 	@Test
-	public void new_buy_order_activate_all_buy_stop_limit_orders_and_check_match_results() {
-		List<MatchResult> results = scenarioGenerator.new_buy_order_activate_all_buy_stop_limit_orders();
-		assertPack.assertMatchResult(results.get(0), MatchingOutcome.EXECUTED, 9, 1);
-		assertPack.assertMatchResult(results.get(1), MatchingOutcome.EXECUTED, 6, 1);
-		assertPack.assertMatchResult(results.get(2), MatchingOutcome.EXECUTED, 7, 1);
-		assertPack.assertMatchResult(results.get(3), MatchingOutcome.EXECUTED, 8, 1);
+	public void new_buy_order_activate_all_buy_stop_limit_orders_and_check_security_response() {
+		SecurityResponse response = scenarioGenerator.new_buy_order_activate_all_buy_stop_limit_orders();
+
+		assertThat(((SituationalStats) response.getStats().getFirst()).getType()).isEqualTo(SituationalStatsType.ADD_ORDER);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(1), 9, 1);
+		assertThat(((SituationalStats) response.getStats().get(2)).getType()).isEqualTo(SituationalStatsType.ORDER_ACTIVATED);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(3), 6, 1);
+		assertThat(((SituationalStats) response.getStats().get(4)).getType()).isEqualTo(SituationalStatsType.ORDER_ACTIVATED);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(5), 7, 1);
+		assertThat(((SituationalStats) response.getStats().get(6)).getType()).isEqualTo(SituationalStatsType.ORDER_ACTIVATED);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(7), 8, 1);
 	}
 
 	@Test
@@ -4872,8 +4963,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_quantity_stop_limit_sell_order_and_not_enough_position_and_check_match_result() {
-		MatchResult res = scenarioGenerator.increase_quantity_stop_limit_sell_order_and_not_enough_position();
-		assertThat(res.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_POSITIONS);
+		SecurityResponse response = scenarioGenerator.increase_quantity_stop_limit_sell_order_and_not_enough_position();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_POSITIONS);
 	}
 
 	@Test
@@ -4891,10 +4983,12 @@ public class SecurityTest {
 	}
 
 	@Test
-	public void increase_stop_price_stop_limit_sell_order_and_activated_and_check_match_results() {
-		List<MatchResult> results = scenarioGenerator.increase_stop_price_stop_limit_sell_order_and_activated();
-		assertPack.assertMatchResult(results.get(0), MatchingOutcome.EXECUTED, 6, 0);
-		assertPack.assertMatchResult(results.get(1), MatchingOutcome.EXECUTED, 6, 2);
+	public void increase_stop_price_stop_limit_sell_order_and_activated_and_check_security_response() {
+		SecurityResponse response = scenarioGenerator.increase_stop_price_stop_limit_sell_order_and_activated();
+		
+		assertThat(((SituationalStats) response.getStats().getFirst()).getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
+		assertThat(((SituationalStats) response.getStats().get(1)).getType()).isEqualTo(SituationalStatsType.ORDER_ACTIVATED);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(2), 6, 2);
 	}
 
 	@Test
@@ -4936,8 +5030,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_price_stop_limit_buy_order_and_not_enough_credit() {
-		MatchResult result = scenarioGenerator.increase_price_stop_limit_buy_order_and_not_enough_credit();
-		assertThat(result.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_CREDIT);
+		SecurityResponse response = scenarioGenerator.increase_price_stop_limit_buy_order_and_not_enough_credit();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_CREDIT);
 	}
 
 	@Test
@@ -4967,8 +5062,9 @@ public class SecurityTest {
 
 	@Test
 	public void increase_quantity_stop_limit_buy_order_and_not_enough_credit_and_check_match_result() {
-		MatchResult result = scenarioGenerator.increase_quantity_stop_limit_buy_order_and_not_enough_credit();
-		assertThat(result.outcome()).isEqualTo(MatchingOutcome.NOT_ENOUGH_CREDIT);
+		SecurityResponse response = scenarioGenerator.increase_quantity_stop_limit_buy_order_and_not_enough_credit();
+		SituationalStats situationalStats = (SituationalStats) response.getStats().getFirst();
+		assertThat(situationalStats.getType()).isEqualTo(SituationalStatsType.NOT_ENOUGH_CREDIT);
 	}
 
 	@Test
@@ -4979,12 +5075,16 @@ public class SecurityTest {
 	}
 
 	@Test
-	public void decrease_stop_price_stop_limit_buy_order_and_activated_and_check_match_results() {
-		List<MatchResult> results = scenarioGenerator.decrease_stop_price_stop_limit_buy_order_and_activated();
-		assertPack.assertMatchResult(results.get(0), MatchingOutcome.EXECUTED, 6, 0);
-		assertPack.assertMatchResult(results.get(1), MatchingOutcome.EXECUTED, 6, 2);
-		assertPack.assertMatchResult(results.get(2), MatchingOutcome.EXECUTED, 7, 2);
-		assertPack.assertMatchResult(results.get(3), MatchingOutcome.EXECUTED, 8, 1);
+	public void decrease_stop_price_stop_limit_buy_order_and_activated_and_check_security_response() {
+		SecurityResponse response = scenarioGenerator.decrease_stop_price_stop_limit_buy_order_and_activated();
+
+		assertThat(((SituationalStats) response.getStats().getFirst()).getType()).isEqualTo(SituationalStatsType.UPDATE_ORDER);
+		assertThat(((SituationalStats) response.getStats().get(1)).getType()).isEqualTo(SituationalStatsType.ORDER_ACTIVATED);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(2), 6, 2);
+		assertThat(((SituationalStats) response.getStats().get(3)).getType()).isEqualTo(SituationalStatsType.ORDER_ACTIVATED);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(4), 7, 2);
+		assertThat(((SituationalStats) response.getStats().get(5)).getType()).isEqualTo(SituationalStatsType.ORDER_ACTIVATED);
+		assertPack.assertExecuteStats((ExecuteStats) response.getStats().get(6), 8, 1);
 	}
 
 	@Test
